--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "node-cron": "^2.0.3",
+    "node-notifier": "^5.3.0",
     "qs": "^6.5.2"
   },
   "devDependencies": {},
