--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.16.4",
     "node-cron": "^2.0.3",
     "node-notifier": "^5.3.0",
-    "qs": "^6.5.2"
+    "qs": "^6.5.2",
+    "web-push": "^3.3.3"
   },
   "devDependencies": {},
   "scripts": {
