--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "express": "^4.16.4",
     "node-cron": "^2.0.3",
     "node-notifier": "^5.3.0",
+    "path": "^0.12.7",
     "qs": "^6.5.2",
-    "web-push": "^3.3.3",
-    "path": "^0.12.7"
+    "web-push": "^3.3.3"
   },
   "devDependencies": {},
   "scripts": {
