--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.4",
     "node-cron": "^2.0.3",
     "node-notifier": "^5.3.0",
+    "openurl": "^1.1.1",
     "path": "^0.12.7",
     "qs": "^6.5.2",
     "web-push": "^3.3.3"
